--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
-const express = require('express');
-const app = express();
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Chatbot Lisa</title>
+  <style>
+    body { font-family: Arial; margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; }
+    #chat { flex: 1; padding: 20px; overflow-y: auto; background: #f0f0f0; }
+    #chat div { margin-bottom: 10px; }
+    .user { text-align: right; color: blue; }
+    .lisa { text-align: left; color: green; }
+    #inputArea { display: flex; padding: 10px; background: #ddd; }
+    #message { flex: 1; padding: 10px; font-size: 16px; }
+    #send { padding: 10px 20px; font-size: 16px; }
+  </style>
+</head>
+<body>
+  <div id="chat"></div>
+  <div id="inputArea">
+    <input id="message" type="text" placeholder="Digite aqui..." />
+    <button id="send">Enviar</button>
+  </div>
 
-app.use(express.json());
+  <script>
+    const chat = document.getElementById('chat');
+    const messageInput = document.getElementById('message');
+    const sendBtn = document.getElementById('send');
 
-// Função que chama o Ollama (modelo local)
-async function consultarIA(mensagem) {
-  const resp = await fetch("http://localhost:11434/api/generate", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      model: "llama3",
-      prompt: mensagem
-    })
-  });
+    function addMessage(text, cls) {
+      const div = document.createElement('div');
+      div.className = cls;
+      div.textContent = text;
+      chat.appendChild(div);
+      chat.scrollTop = chat.scrollHeight;
+    }
 
-  const dados = await resp.json();
+    async function sendMessage() {
+      const message = messageInput.value.trim();
+      if (!message) return;
+      addMessage(message, 'user');
+      messageInput.value = '';
+      
+      const res = await fetch('/chat', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ message })
+      });
+      const data = await res.json();
+      addMessage(data.reply || 'Sem resposta', 'lisa');
+    }
 
-  // Extrai o texto da resposta de forma tolerante (depende do formato do Ollama)
-  if (!dados) return "Sem resposta";
-  if (typeof dados === "string") return dados;
-  if (dados.output) return dados.output;
-  if (dados.response) return dados.response;
-  if (Array.isArray(dados) && dados[0] && dados[0].generated_text) return dados[0].generated_text;
-  // fallback
-  return JSON.stringify(dados);
-}
-
-// Rota que o index.html usa: POST /chat { message: "..." }
-app.post('/chat', async (req, res) => {
-  const userMessage = req.body.message;
-  if (!userMessage) return res.status(400).json({ error: "Campo 'message' é obrigatório." });
-
-  try {
-    const resposta = await consultarIA(userMessage);
-    // Mantemos o formato que o index.html espera: { response: "texto" }
-    return res.json({ response: resposta });
-  } catch (err) {
-    console.error("Erro ao chamar a IA:", err);
-    return res.status(500).json({ error: "Erro interno no servidor" });
-  }
-});
-
-app.get('/', (req, res) => res.send('Chatbot Lisa - server OK'));
-
-app.listen(3000, () => {
-  console.log('Servidor rodando em http://localhost:3000');
-});
+    sendBtn.addEventListener('click', sendMessage);
+    messageInput.addEventListener('keydown', e => { if (e.key === 'Enter') sendMessage(); });
+  </script>
+</body>
+</html>
